# shunyalabs-python-sdk

./: CHANGELOG.md  CONTRIBUTING.md  CREATE_REPO_INSTRUCTIONS.md  LICENSE  Makefile  PUBLISHING_GUIDE.md  PUBLISH_STEPS.md  QUICK_PUBLISH.md  README.md  SDK_CUSTOMIZATION_GUIDE.md  SERVER_IMPLEMENTATION_GUIDE.md  SERVER_QUICK_REFERENCE.md  create_repo.ps1  prepare_for_publish.ps1  pyproject.toml  stt_shunyalabs.py  stt_spm.py  test_apigw_ws_send_passthrough.py  test_sdk.py
.github/: RELEASE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
examples/: asr_batch.py  asr_http.py  asr_streaming.py  asr_ws.py  flow_conversation.py  tts_batch.py  tts_http.py  tts_streaming.py  tts_ws.py
examples/batch/: transcribe_file_async.py
examples/rt/async/: api_gateway_example.py
examples/rt/async/file/: main.py
examples/rt/async/microphone/: README.md  main.py
examples/rt/async/multi_chan/: main.py
examples/tts/: tts_async_example.py
plugins/livekit/: README.md  pyproject.toml
plugins/livekit/examples/: agent_example.py  voicebot.py
plugins/livekit/livekit/plugins/shunyalabs/: __init__.py  stt.py  tts.py
plugins/pipecat/: README.md  pyproject.toml
plugins/pipecat/examples/: pipecat_bot.py
plugins/pipecat/pipecat_shunyalabs/: README.md  __init__.py  stt.py  tts.py
sdk/batch/: MIGRATION.md  README.md  pyproject.toml
sdk/batch/shunyalabs/batch/: __init__.py  _async_client.py  _auth.py  _helpers.py  _logging.py  _models.py  _transport.py
sdk/flow/: MIGRATION.md  README.md  pyproject.toml
sdk/flow/shunyalabs/flow/: __init__.py  _async_client.py  _auth.py  _transport.py
sdk/flow/shunyalabs/flow/_utils/: version.py
sdk/rt/: MIGRATION.md  README.md  pyproject.toml
sdk/rt/shunyalabs/rt/: __init__.py  _async_client.py  _async_multi_channel_client.py  _auth.py  _base_client.py  _events.py  _logging.py  _models.py  _transport.py
sdk/rt/shunyalabs/rt/_utils/: audio.py  message.py  microphone.py  version.py
sdk/tts/: README.md  pyproject.toml
sdk/tts/shunyalabs/tts/: __init__.py  _async_client.py  _auth.py  _helpers.py  _models.py  _transport.py
src/shunyalabs/: __init__.py  _client.py
src/shunyalabs/_core/: __init__.py  _auth.py  _config.py  _events.py  _exceptions.py  _http_transport.py  _logging.py  _models.py  _retry.py  _ws_transport.py
src/shunyalabs/asr/: __init__.py  _batch.py  _models.py  _streaming.py
src/shunyalabs/extras/: __init__.py  _audio.py
src/shunyalabs/flow/: __init__.py  _client.py  _models.py
src/shunyalabs/tts/: __init__.py  _batch.py  _models.py  _streaming.py
tests/: test_client.py
tests/asr/: test_models.py
tests/core/: test_auth.py  test_config.py  test_exceptions.py  test_retry.py
tests/tts/: async_http_test.py  test_models.py
