[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shunyalabs"
version = "1.0.0"
description = "Shunyalabs Python SDK — ASR, TTS, and Conversational AI"
readme = "README.md"
authors = [{ name = "Shunyalabs", email = "support@shunyalabs.com" }]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "shunyalabs", "speech-to-text", "text-to-speech", "asr", "tts",
    "transcription", "conversational-ai", "real-time", "websocket",
]

[project.optional-dependencies]
ASR = ["aiohttp>=3.8", "httpx>=0.27", "aiofiles>=22.0", "websockets>=10.0"]
TTS = ["aiohttp>=3.8", "httpx>=0.27", "websockets>=10.0"]
flow = ["websockets>=10.0"]
all = ["aiohttp>=3.8", "httpx>=0.27", "aiofiles>=22.0", "websockets>=10.0"]
extras = ["sounddevice>=0.4"]
dev = [
    "aiohttp>=3.8",
    "httpx>=0.27",
    "aiofiles>=22.0",
    "websockets>=10.0",
    "black",
    "ruff",
    "mypy",
    "types-aiofiles",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "build",
]

[project.urls]
homepage = "https://github.com/Shunyalabsai/shunyalabs-python-sdk"
documentation = "https://docs.shunyalabs.com/"
repository = "https://github.com/Shunyalabsai/shunyalabs-python-sdk"
issues = "https://github.com/Shunyalabsai/shunyalabs-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shunyalabs" = ["py.typed"]

# --- Tool configs (preserved from original) ---

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "B008",
    "E203",
    "N818",
    "UP007",
    "B904",
    "SIM105",
    "SIM108",
    "SIM117",
    "E501",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-first-party = ["shunyalabs"]
force-single-line = true

[tool.mypy]
python_version = "3.9"
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = ["tests/", "build/", "dist/", "sdk/"]

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sounddevice.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/shunyalabs"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
