[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-plugins-shunyalabs"
version = "0.1.0"
description = "Shunyalabs ASR & TTS plugin for LiveKit Agents"
authors = [{ name = "Shunyalabs", email = "support@shunyalabs.com" }]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "livekit-agents>=1.4",
    "shunyalabs[all]>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["livekit", "shunyalabs", "asr", "stt", "tts", "speech-to-text", "text-to-speech"]

[project.urls]
homepage = "https://shunyalabs.ai"
repository = "https://github.com/Shunyalabsai/shunyalabs-python-sdk"

[project.entry-points."livekit.plugins"]
shunyalabs = "livekit.plugins.shunyalabs"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.setuptools.package-data]
"livekit.plugins.shunyalabs" = ["py.typed"]
