[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-shunyalabs"
version = "0.1.0"
description = "Shunyalabs ASR service for Pipecat"
readme = "README.md"
authors = [{ name = "Shunyalabs", email = "support@shunyalabs.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pipecat-ai>=0.0.30",
    "websockets>=10.0",
    "httpx>=0.27",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["pipecat", "shunyalabs", "asr", "stt", "speech-to-text"]

[project.urls]
homepage = "https://shunyalabs.ai"
repository = "https://github.com/Shunyalabsai/shunyalabs-python-sdk"

[tool.setuptools.packages.find]
where = ["."]
