[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-shunyalabs"
version = "1.0.2"
description = "Shunyalabs ASR & TTS services for Pipecat"
readme = "README.md"
authors = [{ name = "Shunyalabs", email = "support@shunyalabs.ai" }]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pipecat-ai>=0.0.30",
    "shunyalabs[all]>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["pipecat", "shunyalabs", "asr", "stt", "tts", "speech-to-text", "text-to-speech"]

[project.urls]
homepage = "https://shunyalabs.ai"
repository = "https://github.com/Shunyalabsai/shunyalabs-python-sdk"

[tool.setuptools.packages.find]
where = ["."]
