[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shunyalabs-rt"
dynamic = ["version"]
description = "Shunyalabs Real-Time API Client"
readme = "README.md"
authors = [{ name = "Shunyalabs", email = "support@shunyalabs.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = ["websockets>=10.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "shunyalabs",
    "speech-to-text",
    "real-time",
    "transcription",
    "websocket",
]

[project.optional-dependencies]
jwt = ["aiohttp"]
dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "build",
]

[project.urls]
homepage = "https://github.com/shunyalabs/shunyalabs-python-sdk"
documentation = "https://docs.shunyalabs.com/"
repository = "https://github.com/shunyalabs/shunyalabs-python-sdk"
issues = "https://github.com/shunyalabs/shunyalabs-python-sdk/issues"

[tool.setuptools.dynamic]
version = { attr = "shunyalabs.rt.__version__" }

[tool.setuptools.packages.find]
where = ["."]
